--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: lts/*
+      - name: setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - name: get version
         run: echo "PACKAGE_VERSION=$(node -pe "require('./package.json').version")" >> $GITHUB_ENV
       - name: create release
@@ -64,6 +68,11 @@ jobs:
         with:
           node-version: lts/*
 
+      - name: setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
@@ -76,7 +85,7 @@ jobs:
           sudo apt-get install -y libwebkit2gtk-4.0-dev libwebkit2gtk-4.1-dev libappindicator3-dev librsvg2-dev patchelf
 
       - name: install frontend dependencies
-        run: npm install
+        run: pnpm install
 
       - uses: tauri-apps/tauri-action@v0
         env:
@@ -84,7 +93,6 @@ jobs:
         with:
           releaseId: ${{ needs.create-release.outputs.release_id }}
           args: ${{ matrix.args }}
-          packageManager: npm
 
   publish-release:
     permissions:
